# docs-cookiecutter

./: .buildinfo  AGENTS.md  README.md  cookiecutter.json  genindex.html  index.html  objects.inv  readme.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  readme.doctree
.doctrees/devs/: dev.doctree
.github/workflows/: build-docs.yml
_sources/devs/: dev.md.txt
devs/: dev.html
docs/: conf.py  index.rst  pyproject.toml  readme.md
docs/devs/: dev.md
github_actions/: build-docs.yml
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
scripts/: smoke_test_template.sh
{{ cookiecutter.docs_name }}/: AGENTS.md  conf.py  pyproject.toml  readme.md  run_dev.sh
{{ cookiecutter.docs_name }}/github_actions/: build-docs.yml
